--- a/registration.html
+++ b/registration.html
@@ -12,6 +12,14 @@
        
         <script type="text/javascript" src="js/jquery.min.js"></script>   
         <title>Registration</title>
+        <script type="text/javascript">
+            
+            $( window ).on( "orientationchange", function( event ) {
+             //alert("changed");
+             window.location.reload();
+            });
+
+        </script>
     </head>
     <body onload="setHeight()">
 <div class="main">
