--- a/search.html
+++ b/search.html
@@ -14,8 +14,8 @@
         <title>search</title>
     </head>
     <body onload="setHeight()">
-        <div class="main">
-            <div class="container">   
+        <div class="main search_main">
+            <div class="container search_container">   
                 <div class="form beforesearhform">                
                      <form action="#" method="POST">
                          <input class="search_video" type="text" name"search" placeholder="Video Search" value="" required="required">
