--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
             <div class="container search_container">   
                 <div class="form beforesearhform">                
                      <form action="#" method="POST">
-                         <input class="search_video" type="text" name"search" placeholder="Video Search" value="" required="required">
+                         <input class="search_video" type="text" name="search" placeholder="Video Search" value="" required="required">
 
                           <p class="SearchError" style="display:none;">* Enter valid Search.</p>
                          
@@ -27,7 +27,7 @@
                 </div>  
                 <div class="aftersearhform" style="display:none;">                
                      <form action="#" method="POST">
-                         <input class="search" type="text" name"search" placeholder=" Video Search" value="" required="required">
+                         <input class="search" type="text" name="search" placeholder=" Video Search" value="" required="required">
                          <i class="fa fa-search" style=" margin-left: -40px;position: relative; font-size: 24px;" onclick="Second_Search();"/></i> 
                          
                      </form>                   
